# emergent-novelty

./: .gitignore  CLAUDE.md  Cargo.toml  deny.toml
.github/: dependabot.yml
.github/workflows/: cancel-stale-runs.yml  rust.yml
scripts/: ci.sh
sim-core/: CLAUDE.md  Cargo.toml
sim-core/src/: closure.rs  laws.rs  lib.rs  measure.rs  niche.rs  observer.rs  population.rs  quantities.rs  regime.rs  substrate.rs  topology.rs  trajectory.rs  variation.rs  viability.rs
sim-core/tests/: laws.rs  smoke.rs
sim-core/tests/common/: mod.rs
sim-main/: Cargo.toml
