[workspace]
resolver="3"
members = [
    "sim-core",
    "sim-main"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "Proprietary"
authors = ["Liam McGuire"]
repository = "https://github.com/BemusedVermin/emergent-novelty"
publish = false

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = false